Add more description about part 1

--- a/Lab05_102062207.ipynb
+++ b/Lab05_102062207.ipynb
@@ -314,6 +314,14 @@
    "metadata": {},
    "source": [
     "The figure above shows that our regressor does regress in only just 5 iterations!\n",
+    "So why do I choose small $\\eta$ and $\\alpha$ ?\n",
+    "\n",
+    "Since we want to verify our implementation, we need to make sure it can work properly, that is, it can converge in finite iterations. However, some other factors may also let regressor be unable to converge:\n",
+    "* Overshooting, which happens when the stepsize($\\eta$) is too big\n",
+    "* The regressor cannot find a set of $w$ to solve the problem\n",
+    "\n",
+    "When we choose a $\\alpha$ too big, the coefficients of each features will be pressed to zero, and thus resulting large errors. So, to verify our implementation, we have to rule out these two situations by selecting small $\\eta$ and $\\alpha$, and thus we can identify the problem of our LassoRegressor more easily.\n",
+    "\n",
     "\n",
     "Now, let's try it with more iterations:"
    ]
