--- a/Lab05_102062207.ipynb
+++ b/Lab05_102062207.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Subgradient Method\n",
+    "### Subgradient Method\n",
     "The idea of subgradient method is simple :\n",
     "* When the point is differentialble, we just simply compute the gradient\n",
     "* If it's not differentiable, we randomly assign a value $[-1, 1]$ to it, as a **subgradient** and use it to do the descent task.\n",
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Implementation\n",
+    "### Implementation\n",
     "\n",
     "Now let's take a look at my implementation.\n",
     "The comments in the code below will explain the details of my implementation."
@@ -376,7 +376,7 @@
     "\n",
     "But there are a few things we have to do before we directly jump into the tuning process.\n",
     "\n",
-    "#### Inspecting data\n",
+    "### Inspecting data\n",
     "Inspecting data can help us:\n",
     "* Know if our data is learnable\n",
     "* Know the distribution of each data points/features\n",
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By observing the figure above, one will notice that some features might be useless, such as feature $3$ and $8$, since they are not seen to be related to the labels, while features like $5$ and $12$ have some obvious patterns.\n",
+    "By observing the figure above, one will notice that some features might be useless, such as feature $3$ and $8$, since they are not seen to be related to the labels, while features like 5 and 12 have some obvious patterns.\n",
     "\n",
     "And since most of the features have some patterns that related to our labels, I beleive that it is possible for us to learn things from this data set. Now, let us do some testing to support my assumption."
    ]
@@ -527,7 +527,7 @@
     "\n",
     "As for now, we can start tuning, since we've confirmed that the data is learnable.\n",
     "\n",
-    "#### Tuning & Training\n",
+    "### Tuning & Training\n",
     "Our tasks in this section is to :\n",
     "* tune $\\eta$ and $\\alpha$\n",
     "* tune $\\eta$ and $\\alpha$ to **make $w$ sparse**\n",
@@ -783,6 +783,8 @@
     "\n",
     "So why did it can surpass the scikit-Linear regressor(ordinary least square regressor)? One possible reason is that the testing data is too small, and the testing data may just happen to match the pattern our regressor has learned. Once the testing data become bigger and bigger, the scikit one may eventually surpass our regressor.\n",
     "\n",
+    "\n",
+    "### Tuning $\\alpha$ to make $w$ sparse\n",
     "Now, we have to tune the $\\alpha$ to make $w$ sparse."
    ]
   },
@@ -873,7 +875,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ordinary least square regressor will just simply compute:\n",
+    "$$min_{w}\\Vert Xw - y\\Vert_{2}^{2}$$\n",
+    "\n",
+    "So it's not surprise to have a flat $w$.\n",
+    "\n",
+    "However, the $\\alpha$ term will work as a compressor in **LassoRegressor** : The larger the $\\alpha$, the smaller the coefficients, and **the less useful a feature is, the faster it will be compressed to zero**. \n",
+    "\n",
+    "And in our LassoRegressor, the $w$ will be become sparse will $\\alpha$ is closed to 1, and will have only 2 featues left when $\\alpha=2$.\n",
+    "\n",
+    "This figure can also explain when $R^2$ and $MSE$ escalated quick when we picking a $\\alpha$ larger than 1. When $\\alpha$ reaches 1, many of the weights have been pressed to zero, that is, some possibly useful features might be eliminated from the regressor. and when $\\alpha$ gets to 6, all the weights have been pressed to zero, which means that the regressor make prediction based on **only on bias, since other features have been totally eliminated**.\n",
+    "\n",
+    "So if you check the figure of $MSE$ and $R^2$, you will find that $R^2$ reaches 0.0 and the curve of $MSE$ is flatten after setting $\\alpha=6$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "In this section, we have found that:\n",
+    "* $\\eta=0.001$ with $\\alpha=0.001$ can make our regressor work well\n",
+    "* when $\\alpha$ reaches 1, it will start becoming sparse"
+   ]
   },
   {
    "cell_type": "markdown",
